# gsc-mcp

./: .gitignore  README.md  pyproject.toml
src/gsc_mcp/: __init__.py  auth.py  server.py
