[project]
name = "gsc-mcp"
version = "0.1.0"
description = "MCP server for Google Search Console — multi-property, Service Account auth"
requires-python = ">=3.11"
authors = [{ name = "Michał Cholewski" }]
license = { text = "MIT" }
dependencies = [
    "mcp>=1.2.0",
    "google-api-python-client>=2.150.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.0",
]

[project.scripts]
gsc-mcp = "gsc_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gsc_mcp"]
